--- a/README
+++ b/README
@@ -10,3 +10,7 @@ Server folder - https://github.com/doublethink/Judas-Server.git
 The phonegap repo can simply be linked to Phonegap-Build instead of bothering to zip and upload.
 
 For correspondence email me at: Stephen@doublethink.co.nz
+
+
+
+Hello :) Tammy Kuo in the house. Ready to rumble.
